plugins {
    id 'java'
}

group 'org.springframework'
version '5.3.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

checkstyle {
    sourceSets = []
}

tasks.withType(JavaCompile) {
    // Try to turn them all off automatically
    options.compilerArgs << '-Xlint:none'
    options.compilerArgs << '-nowarn' // same as '-Xlint:none'
    options.compilerArgs << '-Xlint:-unchecked'
    options.compilerArgs << '-Xlint:-deprecation'
}

dependencies {
    compile(project(":spring-beans"))
    compile(project(":spring-core"))
    compile(project(":spring-aop"))
    compile(project(":spring-context"))

    // Aspect注解使用
    compile(project(":spring-aspects"))

    // Spring groovy表达式
    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.3.6'

    //spring dao
    compile(project(":spring-orm"))
    compile(project(":spring-tx"))
    compile "org.hibernate:hibernate-core:4.2.0.Final"
    compile "commons-dbcp:commons-dbcp:1.4"

    //spring webmvc
    compile(project(":spring-webmvc"))

    //compile(project(":spring-test"))
    compile group: 'org.springframework', name: 'spring-test', version: '5.2.6.RELEASE'
    
    //mybatis
    compile "org.mybatis:mybatis:3.5.5"
    compile "org.mybatis:mybatis-spring:2.0.5"

    //quartz
    compile group: 'org.quartz-scheduler', name: 'quartz', version: '1.8.6'
    compile(project(":spring-context-support"))

    //spring mvc
    compile 'com.thoughtworks.xstream:xstream:1.4.8'
    compile 'org.apache.poi:poi:3.9'
    compileOnly 'javax.servlet:servlet-api:3.0-alpha-1'
    compile 'javax.validation:validation-api:1.1.0.Final'
    compile 'org.hibernate:hibernate-validator:5.1.3.Final'
    compile 'com.fasterxml.jackson.core:jackson-core:2.5.1'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
    compile 'com.thoughtworks.xstream:xstream:1.4.8'
    compile(project(":spring-oxm"))
    compile 'freemarker:freemarker:2.3.8'
    compile 'com.lowagie:itext:2.0.7'



    compile "org.slf4j:slf4j-api:1.7.5"
    compile "org.slf4j:slf4j-log4j12:1.7.5"
    compile "commons-lang:commons-lang:2.2"
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
    //checkstyleMain.exclude('com/smart/**')
    //checkstyleTest.enabled = false

}
